<package>
  <name>hrpsys_gazebo_general</name>
  <version>0.1.9</version>
  <description>hrpsys_gazebo_general</description>
  <maintainer email="youhei@jsk.t.u-tokyo.ac.jp">Yohei Kakiuchi</maintainer>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hrpsys_gazebo_general</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="youhei@jsk.t.u-tokyo.ac.jp">Yohei Kakiuchi</author>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hrpsys_ros_bridge</build_depend>
  <build_depend>hrpsys_gazebo_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>collada_urdf_jsk_patch</build_depend>

  <run_depend>hrpsys_ros_bridge</run_depend>
  <run_depend>hrpsys_gazebo_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>collada_urdf_jsk_patch</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/robot_models" />
  </export>
</package>
