<package>
  <name>hrpsys_gazebo_msgs</name>
  <version>0.1.4</version>
  <description>hrpsys_gazebo_msgs</description>
  <maintainer email="youhei@jsk.t.u-tokyo.ac.jp">Yohei Kakiuchi</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hrpsys_gazebo_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="youhei@jsk.t.u-tokyo.ac.jp">Yohei Kakiuchi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
