<package>
  <name>hrpsys_gazebo_tutorials</name>
  <version>0.1.0</version>
  <description>hrpsys_gazebo_tutorials</description>
  <maintainer email="youhei@jsk.t.u-tokyo.ac.jp">Yohei Kakiuchi</maintainer>
  <license>BSD</license>
  <author email="youhei@jsk.t.u-tokyo.ac.jp">Yohei Kakiuchi</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hrpsys_ros_bridge_tutorials</build_depend>
  <build_depend>hrpsys_gazebo_general</build_depend>
  <build_depend>collada_tools</build_depend>
  <build_depend>euscollada</build_depend>

  <run_depend>euscollada</run_depend>
  <run_depend>hrpsys_ros_bridge_tutorials</run_depend>
  <run_depend>hrpsys_gazebo_general</run_depend>
  <run_depend>collada_tools</run_depend>

</package>

